--- a/src/main/resources/static/coures-list.html
+++ b/src/main/resources/static/coures-list.html
@@ -35,8 +35,8 @@
                         $("tbody").append("<tr class=\"text-c\">" +
                             "<td><input name='' type='checkbox' value=''></td>" +
                             "<td>"+(index+1)+"</td>" +
-                            "<td>"+obj.stype+"</td>" +
-                            "<td><img src="+obj.iurl+" style='width: 50px;height: 30px'></td>" +
+                            "<td>"+obj.score+"</td>" +
+                            "<td><img src="+obj.surl+" style='width: 50px;height: 30px'></td>" +
                             "<td>"+obj.sadress+"</td>" +
                             "<td>"+obj.steacher+"</td>" +
                             "<td>"+obj.slevel+"</td>" +
@@ -67,7 +67,7 @@
             <tr class="text-c">
                 <th width="40"><input name="" type="checkbox" value=""></th>
                 <th width="80">序号</th>
-                <th width="100">分类</th>
+                <th width="100">课程名</th>
                 <th width="100">封面</th>
                 <th width="200">出版社</th>
                 <th width="80">任课教师</th>
