--- a/src/main/resources/static/grade-list.html
+++ b/src/main/resources/static/grade-list.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-<pre>    <span class="span1">学生名：</span>  <input type="text" class="check1" name="sname" placeholder="请输入学生名">    <span class="span1">学号：</span>  <input type="text" name="snumber" class="check1" placeholder="请输入学生学号"> <select class="check1" name="time1"></select>--<select class="check1" name="time2"></select>
+<pre>    <span class="span1">学生名：</span>  <input type="text" class="check1" name="sname" placeholder="请输入学生名">    <span class="span1">学号：</span>  <input type="text" name="snumber" class="check1" placeholder="请输入学生学号"> 学期<select class="check1" name="time1"></select>--<select class="check1" name="time2"></select>
 
     <span class="span1">学院：</span>  <select id="xy" name="xy" class="check" onchange="select()"><option>请选择学院</option></select>   <span class="span1">专业：</span>  <select id="zy" name="zy"  type="text" class="check" onchange="ZYchange()"><option>请选择专业</option></select>   <span class="span1">班级：</span>  <select type="text" name="cla" class="check" id="cla"><option>请选择班级</option></select>   <input class="check" type="button" onclick="submitGrade()" value="搜索" style="background-color: deepskyblue"></pre>
 
