--- a/src/main/resources/static/student-list.html
+++ b/src/main/resources/static/student-list.html
@@ -60,6 +60,7 @@
     <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
     <script src="https://cdn.staticfile.org/vue-resource/1.5.1/vue-resource.min.js"></script>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script src="/js/layui.all.js"></script>
     <script type="text/javascript">
         var start=1;
         var tmp=0;
@@ -118,6 +119,23 @@
              })
 
          })
+          $("#file1").click(function () {
+              layer.open({
+                  type:1,
+                      title : "Excel导入",
+                      maxmin : true,
+                      offset: '100px',
+                      area : [ '600px', '500px' ],
+                      content : "<html><body><form action=\"/excel/import\" method=\"post\" enctype=\"multipart/form-data\">\n" +
+                          "\n" +
+                          "        <div>选择需要导入的Excel表格文件<input type=\"file\" name=\"file\"></div>\n" +
+                          "        <input type=\"submit\" value=\"确认\" ><input  type=\"button\" value=\"取消\" onclick=\"quxiao1()\" >\n" +
+                          "\n" +
+                          "\n" +
+                          "</form></body></html>"
+              })
+          })
+
           $("#addStudent").click(function () {
               $("#addStudent01").show();
               $("#center").hide();
@@ -213,6 +231,8 @@
     }
 
 </script>
+    <link rel="stylesheet" href="css/layui.css">
+
 </head>
 <body>
 <div id="addStudent01" style="display:none">
@@ -222,13 +242,16 @@
         电话：   <pre>       <input class="addStudent" type="text" name="sphone"></pre>
         学号：   <pre>       <input class="addStudent" type="text" name="snumber"></pre>
         出生年月:<pre>       <input class="addStudent" type="date" name="sbrithday"></pre>
-       <pre>       <input class="add1" type="button" value="取消" id="qx">                <input class="add1" type="submit" value="提交" id="true"></pre>
+        学院：   <pre>       <select class="addStudent" type="text" name="dxy" id="xy" onchange="select()"><option>请选择学院</option></select></pre>
+        专业：   <pre>       <select class="addStudent" type="text" name="dzy" id="zy" onchange="ZYchange()"><option>请选择专业</option></select></pre>
+        班级：   <pre>       <select class="addStudent" type="text" name="dclass" id="cla" ><option>请选择班级</option></select></pre>
+       <pre>       <input class="add1" type="button" value="取消" id="qx">                 <input class="add1" type="button" value="提交" onclick="methodBtn()">   <input class="add1" type="submit" value="提交" id="true" style="display: none"></pre>
     </form>
 </div>
 <div id="center">
     <div id="div_left"><input type="button" value="批量删除" style="width: 200px;height: 60px;background-color:red;border-radius: 6px" onclick="deleteAll()" style="background-color: deepskyblue;width: 200px;height: 60px;border-radius: 3px" ></div>
     <div id="div_right"><button id="addStudent" style="width: 200px;height: 60px;background-color: deepskyblue;border-radius: 6px">新增学生</button></div>
-    <input type="button" value="Excel导出" id="file"  style="background-color: deepskyblue;width: 200px;height: 60px;border-radius: 3px" ><input type="button" value="Excel导入" id="file1"  style="background-color: deepskyblue;width: 200px;height: 60px;border-radius: 3px" onclick="importExp()"></pre>
+    <input type="button" value="Excel导出" id="file"  style="background-color: deepskyblue;width: 200px;height: 60px;border-radius: 3px" ><input type="button" value="Excel导入" id="file1"  style="background-color: deepskyblue;width: 200px;height: 60px;border-radius: 3px"></pre>
     <pre>
 
 
@@ -250,6 +273,69 @@
     <pre>                               <input class="ye" type="button" value="上一页" onclick="upordown(start-1)">              <input type="text" style="width: 60px;height: 20px;text-align: center" readonly="readonly" id="ye_center">               <input class="ye" type="button" value="下一页" onclick="upordown(start+1)"></pre>
 </div>
 </div>
-</body>
+<div id="div1" style="width: 200px;height: 200px;background-color: #00b7ee;position: absolute;right: 300px;top: 300px;display: none">
 
+</div>
+
+
+
+</body>
+<script>
+    function methodBtn() {
+        if($("#xy").val()=="请选择学院"||$("#zy").val()=="请选择专业"||$("#cla").val()=="请选择班级"){
+            $("#div1").show();
+            $("#div1").html("<p>信息填写不完整或错误！请填写正确的学院以及相应的专业和班级</p>");
+            return;
+        }
+        $("#true").click();
+    }
+    function select() {
+        console.log($("#xy").val())
+        if($("#xy").val()=="请选择学院"){
+            $("#zy  option").remove("");
+            $("#zy").append("<option>请选择专业</option>")
+            $("#cla  option").remove("");
+            $("#cla").append("<option>请选择班级</option>")
+            return;
+        }
+        $("#zy  option").remove("");
+        $.get("/college/zyAll1",{"cid":$("#xy").val()},function (data) {
+            console.log(data)
+            var list=JSON.parse(data);
+            var str1="";
+            for (var i=0;i<list.length;i++){
+                str1="<option value='"+list[i].id+"'>"+list[i].zyName+"</option>"
+                $("#zy").append(str1);
+            }
+        })
+    }
+    function ZYchange() {
+        $("#cla  option").remove("");
+        $.get("/college/claAll1",{"classid":$("#zy").val()},function (data) {
+            console.log(data)
+            var list=JSON.parse(data);
+            var str1="";
+            for (var i=0;i<list.length;i++){
+                str1="<option value='"+list[i].id+"'>"+list[i].cname+"</option>"
+                $("#cla").append(str1);
+            }
+        })
+    }
+    function methodA() {
+        if($("#dnumber1").text()==""){
+            $("#dnumberspan").text("请正确填写宿舍号！")
+        }
+        $("#dnumberspan").text("")
+        $.ajax({
+            method:"get",
+            url:"/drom/selectDromOne",
+            data:{"dtype":$("#type1").val(),"dnumber1":$("#dnumber1").val()},
+            success:function (data) {
+                if(data.length>0){
+                    $("#dnumberspan").text(data);
+                }
+            }
+        })
+    }
+</script>
 </html>
