--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -1,110 +1,65 @@
 ﻿<!DOCTYPE html>
-<html lang="zh">
+<html>
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge"><!--ie使用edge渲染模式-->
-<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
-<meta name="renderer" content="webkit"><!--360渲染模式-->
-<meta name="format-detection" content="telephone=notelphone=no, email=no" />
-<meta name="description" content="" />
-<meta name="keywords" content="" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<meta name="apple-touch-fullscreen" content="yes"><!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black"><!-- 设置苹果工具栏颜色:默认值为 default，可以定为 black和 black-translucent-->
-<meta http-equiv="Cache-Control" content="no-siteapp" /><!-- 不让百度转码 -->
-<meta name="HandheldFriendly" content="true"><!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
-<meta name="MobileOptimized" content="320"><!-- 微软的老式浏览器 -->
-<meta name="screen-orientation" content="portrait"><!-- uc强制竖屏 -->
-<meta name="x5-orientation" content="portrait"><!-- QQ强制竖屏 -->
-<meta name="browsermode" content="application"><!-- UC应用模式 -->
-<meta name="x5-page-mode" content="app"><!-- QQ应用模式 -->
-<meta name="msapplication-tap-highlight" content="no"><!-- windows phone 点击无高光 -->
-<title>jQuery响应式图片切换代码 - 站长素材</title>
-<link rel="stylesheet" href="/css/index.css" />
-	<script src="js/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript">
-		window.onload=function()
-        {
-            $.get("/image/selectStatus", function (data) {
-                console.log(data)
-                var data1 = JSON.parse(data);
-                $.each(data1, function (index, obj) {
-                   /* if (index == 3) {
-                        $("#img4").attr("src", obj.iurl);
-                    }
-                    if (index == 2) {
-                        $("#img3").attr("src", obj.iurl);
-                    }
-                    if (index == 1) {
-                        $("#img2").attr("src", obj.iurl);
-                    }
-                    if (index == 0) {
-                        $("#img1").attr("src", obj.iurl);
-                    }*/
-                   $("#img"+(index+1)).attr("src",obj.iurl);
-                })
-            })
-        }
-	</script>
+    <title>轮播</title>
+    <link rel="stylesheet" href="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+        $(function(){
+            $('#myCarousel').carousel({interval:2000});
+                $.get("/image/selectStatus2", function (data) {
+                    console.log(data)
+                    var data1 = JSON.parse(data);
+                    $.each(data1, function (index, obj) {
+                        /* if (index == 3) {
+                             $("#img4").attr("src", obj.iurl);
+                         }
+                         if (index == 2) {
+                             $("#img3").attr("src", obj.iurl);
+                         }
+                         if (index == 1) {
+                             $("#img2").attr("src", obj.iurl);
+                         }
+                         if (index == 0) {
+                             $("#img1").attr("src", obj.iurl);
+                         }*/
+                        $("#img"+(index+1)).attr("src",obj.iurl);
 
+                    })
+                })
+        })
+    </script>
+    <style>
+       #myCarousel{
+           display: table-cell;
+           vertical-align: middle;
+       }
+
+    </style>
 </head>
 <body>
-<div class="js-silder">
-   <div class="silder-scroll">
-		<div class="silder-main">
-			<div class="silder-main-img">
-				<img id="img1" alt="">
-			</div>
-			<div class="silder-main-img">
-				<img id="img2" alt="">
-			</div>
-			<div class="silder-main-img">
-				<img id="img3" alt="">
-			</div>
-			<div class="silder-main-img">
-				<img id="img4" alt="">
-			</div>
-		</div>
-	</div>
+<div id="myCarousel" class="carousel slide">
+    <ol class="carousel-indicators">
+        <li data-target = '#myCarousel' data-slide-to = "0" class="active"></li>
+        <li data-target = '#myCarousel' data-slide-to = "1"></li>
+        <li data-target = '#myCarousel' data-slide-to = "2"></li>
+        <li data-target = '#myCarousel' data-slide-to = "3"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="item active">
+            <img id="img1" alt="first slide" style="width: 800px;height:500px"/>
+        </div>
+        <div class="item">
+            <img id="img2" alt="second slide" style="width: 800px;height:500px"/>
+        </div>
+        <div class="item">
+            <img id="img3" alt="third slide" style="width: 800px;height:500px"/>
+        </div>
+        <div class="item">
+            <img id="img4" alt="third slide" style="width: 800px;height:500px"/>
+        </div>
+    </div>
 </div>
-<pre>
-<div id="div-left">
-	<ul>
-		<li>智</li>
-		<li>圆</li>
-		<li>行</li>
-		<li>方</li>
-	</ul>
-</div>
-<div id="div-right">
-	<ul>
-		<li>应</li>
-		<li>天</li>
-		<li>归</li>
-		<li>德</li>
-	</ul>
-</div>
-
-</pre>
-<div id="div-wang">
-	欢迎来到商丘师范学院学生管理系统
-</div>
-<script src="/js/jquery-1.11.3.min.js" type="text/javascript"></script>
-<script src="/js/wySilder.min.js" type="text/javascript"></script>
-<script>
-	$(function (){
-		$(".js-silder").silder({
-			auto: true,//自动播放，传入任何可以转化为true的值都会自动轮播
-            captions: true,//自动控制
-			speed: 20,//轮播图运动速度
-			sideCtrl: true,//是否需要侧边控制按钮
-			bottomCtrl: true,//是否需要底部控制按钮
-			defaultView: 0,//默认显示的索引
-			interval: 1500,//自动轮播的时间，以毫秒为单位，默认3000毫秒
-			activeClass: "active",//小的控制按钮激活的样式，不包括作用两边，默认active
-		});
-	});
-</script>
-
 </body>
 </html>
