--- a/src/main/resources/static/grade-list.html
+++ b/src/main/resources/static/grade-list.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="/lib/html5shiv.js"></script>
+    <script type="text/javascript" src="/lib/respond.min.js"></script>
+    <![endif]-->
+    <link rel="stylesheet" type="text/css" href="/h-ui/css/H-ui.min.css" />
+    <link rel="stylesheet" type="text/css" href="/h-ui.admin/css/H-ui.admin.css" />
+    <link rel="stylesheet" type="text/css" href="/lib/Hui-iconfont/1.0.8/iconfont.css" />
+    <link rel="stylesheet" type="text/css" href="/h-ui.admin/skin/default/skin.css" id="skin" />
+    <link rel="stylesheet" type="text/css" href="/h-ui.admin/css/style.css" />
+    <!--[if IE 6]>
+    <script type="text/javascript" src="/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
+    <script>DD_belatedPNG.fix('*');</script>
+    <![endif]-->
     <title>成绩查询</title>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-    <script>
+   <script>
         $(function (){
             $.get("/college/xyAll",function (data) {
                 console.log(data)
@@ -41,11 +58,33 @@
 </head>
 <body>
 
-<pre>    <span class="span1">学生名：</span>  <input type="text" class="check1" name="sname" placeholder="请输入学生名">    <span class="span1">学号：</span>  <input type="text" name="snumber" class="check1" placeholder="请输入学生学号"> 学期<select class="check1" name="time1"></select>--<select class="check1" name="time2"></select>
+<pre>    <span class="span1">学生名：</span>  <input type="text" class="check1" name="sname" placeholder="请输入学生名">    <span class="span1">学号：</span>  <input type="text" name="snumber" class="check1" placeholder="请输入学生学号"> 学期<select class="check1" name="time1"></select>--<select class="check1" name="time2"><option value="请选择学期">请选择学期</option><option value="第一学期">第一学期</option><option value="第二学期">第二学期</option></select>
 
-    <span class="span1">学院：</span>  <select id="xy" name="xy" class="check" onchange="select()"><option>请选择学院</option></select>   <span class="span1">专业：</span>  <select id="zy" name="zy"  type="text" class="check" onchange="ZYchange()"><option>请选择专业</option></select>   <span class="span1">班级：</span>  <select type="text" name="cla" class="check" id="cla"><option>请选择班级</option></select>   <input class="check" type="button" onclick="submitGrade()" value="搜索" style="background-color: deepskyblue"></pre>
+    <span class="span1">学院：</span>  <select id="xy" name="xy" class="check" onchange="select()"><option value="0">请选择学院</option></select>   <span class="span1">专业：</span>  <select id="zy" name="zy"  type="text" class="check" onchange="ZYchange()"><option value="0">请选择专业</option></select>   <span class="span1">班级：</span>  <select type="text" name="cla" class="check" id="cla"><option value="0">请选择班级</option></select>   <input class="check" type="button" onclick="submitGrade()" value="搜索" style="background-color: deepskyblue"></pre>
+
+
+<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="r">共有数据：<strong><span id="count"></span></strong> 条</span> </div>
+<div class="mt-20">
+    <table class="table table-border table-bordered table-bg table-hover table-sort">
+        <thead>
+        <tr class="text-c">
+            <th width="40"><input name="" type="checkbox" value=""></th>
+            <th width="80">序号</th>
+            <th width="100">学生</th>
+            <th width="100">C</th>
+            <th width="200">C++</th>
+            <th width="80">Java</th>
+            <th width="100">操作</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 
 </body>
+
+
 <script>
     function submitGrade() {
         $.ajax({
@@ -62,7 +101,19 @@
             },
             dataType:"json",
             success:function (data) {
-                console.log(data);
+                $("tbody tr").remove();
+                $("#count").text(data.length);
+                $.each(data,function (index,obj) {
+                    $("tbody").append("<tr class=\"text-c\">" +
+                        "<td><input name='' type='checkbox' value=''></td>" +
+                        "<td>"+(index+1)+"</td>" +
+                        "<td>"+obj.stuid+"</td>" +
+                        "<td>"+obj.c+"</td>" +
+                        "<td>"+obj.c1+"</td>" +
+                        "<td>"+obj.java+"</td>" +
+                        "<td><button>查看</button>&nbsp;&nbsp;&nbsp;<button>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
+                        "</tr>")
+                })
             }
             }
             )
@@ -100,4 +151,14 @@
         })
     }
 </script>
+<!--_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="/lib/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="/lib/layer/2.4/layer.js"></script>
+<script type="text/javascript" src="/h-ui/js/H-ui.min.js"></script>
+<script type="text/javascript" src="/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
+
+<!--请在下方写此页面业务相关的脚本-->
+<script type="text/javascript" src="/lib/My97DatePicker/4.8/WdatePicker.js"></script>
+<script type="text/javascript" src="/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="/lib/laypage/1.2/laypage.js"></script>
 </html>
